--- a/index.html
+++ b/index.html
@@ -10,48 +10,7 @@
 </head>
 
 <body>
-  <div id="app">
-    <style>
-      html,
-      body,
-      #app {
-        height: 100%;
-        margin: 0px;
-        padding: 0px;
-        width: 100%;
-      }
-
-      .__spinner-container {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .__spinner {
-        position: relative;
-        width: 68px;
-        height: 68px;
-        background-color: #41b883;
-        animation: cube-shadow-spinner 1.8s cubic-bezier(0.75, 0, 0.5, 1) infinite;
-      }
-
-      @keyframes cube-shadow-spinner {
-        50% {
-          border-radius: 50%;
-          transform: scale(0.5) rotate(360deg);
-        }
-
-        100% {
-          transform: scale(1) rotate(720deg);
-        }
-      }
-    </style>
-    <div class="__spinner-container">
-      <div class="__spinner"></div>
-    </div>
-  </div>
+  <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
